...
              maximumValue={5}
              step={1}
              value={parseInt(this.state.timeCycle)}
              onValueChange={(value) => this.setState({timeCycle: value.toString()})}
            />
          </View>
          <Button testID='buttonInit' title='start' onPress={this.onButtonPress} />
        </View>
      );
    }
  }

  const styles = StyleSheet.create({
...
